# oglcraft

./: .gitignore  CMakeLists.txt  README.md  TODO.md  math_generator.py
includes/: FastNoiseLite.h
src/: Block.c  Block.h  Camera.c  Camera.h  Chunk.c  Chunk.h  GlWrapper.h  Shader.c  main.c
src/Game/: ChunkManager.c  ChunkManager.h  Player.h  Raycaster.c  Raycaster.h
src/Renderer/: Chunk.c  Chunk.h  GlWrapper.c  GlWrapper.h  HeldItem.c  HeldItem.h  Selection.c  Selection.h  Shader.c  Shader.h  Skybox.c  Skybox.h
src/Terrain/: Block.c  Block.h  Chunk.c  Chunk.h
src/shaders/: heldItem.frag  heldItem.vert  selection.frag  selection.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
